Adding components to module and refactoring

--- a/my-angular-app/src/app/element/components/element.component.html
+++ b/my-angular-app/src/app/element/components/element.component.html
@@ -1,2 +1,2 @@
-<p>Testing Angular element in the app!</p>
-<my-angular-element></my-angular-element>
+<h2>Testing Angular element in the app!!</h2>
+<!-- <my-angular-element></my-angular-element> -->
