Lazy loading module

--- a/my-angular-app/src/app/app.component.html
+++ b/my-angular-app/src/app/app.component.html
@@ -8,5 +8,8 @@
     <li class="nav-item"  role="presentation">
         <a class="nav-link" routerLink="element" routerLinkActive="active">Element</a>
     </li>
+    <li class="nav-item"  role="presentation">
+        <a class="nav-link" routerLink="lazy" routerLinkActive="active">Lazy</a>
+    </li>
 </ul>
 <router-outlet></router-outlet>
