Working Angular Library and ANgular Element example

--- a/my-angular-app/src/app/element/components/element.component.html
+++ b/my-angular-app/src/app/element/components/element.component.html
@@ -1,2 +1,2 @@
 <h2>Testing Angular element in the app!!</h2>
-<!-- <my-angular-element></my-angular-element> -->
+<my-angular-element></my-angular-element>
